--- a/aracfiyat.html
+++ b/aracfiyat.html
@@ -140,7 +140,7 @@
               </tr>
 			  <tr>
                 <!--Araç Tipi--> <td>B14R</td>
-                <!--Kullanım--> <td><code>!al B14R</code></td>
+                <!--Kullanım--> <td><code>ALIMA KAPALI!</code></td>
                 <!--E.A--> <td>0</td>
 				<!--H.E.K--> <td>30</td>
 				<!--Fiyat--> <td>13.500TL</td>
