--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta name="keywords" content="Live For Speed, LFS, lfs, liveforspeed, live for speed, cruise server, cruise sunucusu, Cruise, cruise, lfs sunucu, InSim, insim, Cruise InSim">
         <meta itemprop="name" content="Alsancak Garage - Anasayfa">
-        <meta itemprop="description" content="Live For Speed Adlı Oyunda Gelişmiş Bir City Sunucusu!">
+        <meta itemprop="description" content="Live For Speed Adlı Oyunda Gelişmiş Bir Sunucusu!">
         <meta itemprop="image" content="images/tglogo.png"> 
 
         
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Alsancak Garage Tarafından Geliştirilmiş Bir Cruise Server!">
     <meta property="og:title" content="Alsancak Garage - Cruise"/>
-    <meta property="og:url" content="https://alsancakgarage.tk/"/>
+    <meta property="og:url" content="https://serhatahmet2005.github.io/alsancakgarage/"/>
     <meta property="og:site_name" content="Anasayfa"/>
     <meta name="copyright" content="© 2021-2022 Alsancak Garage - Advanced Cruise Server!" >
     <meta property="og:footer" content="Sitemizi Ziyaret Etmeye Nedersin?"/>
@@ -87,11 +87,11 @@
 
            <div class="duyuru mesaj">
   <h4 class="duyurucuk"><i class="lni lni-bullhorn"></i> Duyuru</h4>
-	<p>LFS Sunucumuz 6U'da Açılmıştır!</p>
+	<p>Live For Speed Sunucularımız Kapanmıştır!</p>
 		   <br>
-		   <p>Ip : 78.111.111.144</p>
-		   <p>Cruise Port :77777(GEZİNTİ)</p>
-		   <p>Cruise Port :77778(CRUİSE)</p>
+		   <p>Blog Sitemiz : https://alsancakgaragee.blogspot.com</p>
+		   <p>Kurucu : SerhatÇakmakcı)</p>
+		   <p>AlSANCAK GARAGE UNUTULMAZDIR!</p>
             </div>
 
         <div class="container">
