--- a/kurallar.html
+++ b/kurallar.html
@@ -2,7 +2,7 @@
 <html itemtype="http://schema.org/Thing" lang="en-US">
     <head> 
 
-        <title>Türkiyem Garage - Kurallar</title>
+        <title>Alsancak Garage - Kurallar</title>
 
         <!-- Metadata -->
         <meta charset="utf-8" />
@@ -143,8 +143,8 @@ Sunucumuza giriş yapan tüm kullanıcılar yukarıdaki kuralları okumuş ve ka
           </div>
       <div class="footer-copyright">
             <div class="container">
-            © 2018-2021 Türkiyem Garage Design By <a href="https://instagram.com/ccanerertas" target="_blank" class="footme" >Caner Ertaş</a>
-            <a class="grey-text text-lighten-4 right altlink" href="mailto:turkiyemgarage@gmail.com" title="Email" >turkiyemgarage@gmail.com</a>
+            © 2021-2024 Alsancak Garage Design By <a href="https://instagram.com/10serhat_0" target="_blank" class="footme" >SerhatÇakmakcı</a>
+            <a class="grey-text text-lighten-4 right altlink" href="" title="Email" ></a>
             <a class="grey-text text-lighten-4 right altlink" href="kurallar.html" title="kurallar">Kurallar</a>
             <a class="grey-text text-lighten-4 right altlink" href="/" title="anasayfa">Anasayfa</a>
             
